# TextEditor

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
Text_Editor/: CMakeLists.txt  dictionary.cpp  dictionary.hpp  hash_table.cpp  hash_table.hpp  hash_table_impl.hpp
Text_Editor/dictionary/: dictionary.cpp  dictionary.hpp
Text_Editor/hash_table/: hash_table.cpp  hash_table.hpp
Text_Editor/includes/: dictionary.hpp  hash_table.hpp  text_editor.hpp
Text_Editor/sources/: dictionary.cpp  hash_table.cpp  main.cpp  text_editor.cpp
Text_Editor/text_editor/: text_editor.cpp  text_editor.hpp
Text_Editor/texts_for_teaching/: LoR.txt
fixed_texts/: MyText.txt  test.txt
fixed_texts/test_texts/: 1_ans.txt  2_ans.txt  3_ans.txt
tests/: CMakeLists.txt  tests.cpp
texts/: Onegin.txt  test.txt
texts_for_fixing/: MyText.txt  test.txt
texts_for_fixing/test_texts/: 1.txt  2.txt  3.txt
texts_for_teaching/: Onegin.txt
texts_for_teaching/test_texts/: 1.txt
